fix spacing?

--- a/new-farmer2.css
+++ b/new-farmer2.css
@@ -349,8 +349,8 @@
     position: absolute;
     width: 331px;
     height: 112px;
-    left: 555px;
-    top: 620px;
+    left: 33.6%;
+    bottom: 3.75%;
     
     border: 5px solid #2A363B;
     box-sizing: border-box;
